--- a/index.html
+++ b/index.html
@@ -3,84 +3,91 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<title>Crypto简史 · 封面阅读（SPA）</title>
+<title>Crypto简史 · 移动阅读（SPA）</title>
 <style>
 :root{
-  --ink:#202124;--muted:#5f6368;--bg:#ffffff;--bg-soft:#f6f8fa;--border:#e5e7eb;
+  --ink:#1f2937;--muted:#6b7280;--bg:#ffffff;--bg-soft:#f8fafc;--border:#e5e7eb;
   --brand:#0b6efd;--brand2:#8b5cf6;
   --shadow:0 1px 2px rgba(0,0,0,.06),0 10px 30px rgba(0,0,0,.12);
-  --top-offset: 56px;
-  --bottom-offset: 64px;
+  --top-offset: 0px;   /* 覆盖在阅读模式下由脚本设置 */
+  --bottom-offset: 56px;
 }
 @media (prefers-color-scheme: dark){
-  :root{--ink:#e5e7eb;--muted:#9aa0a6;--bg:#0b0d12;--bg-soft:#12141a;--border:#242730;--brand:#4f8cff;--brand2:#a78bfa;}
+  :root{--ink:#e5e7eb;--muted:#9aa0a6;--bg:#0b0d12;--bg-soft:#0f1218;--border:#242730;--brand:#4f8cff;--brand2:#a78bfa;}
   body{color-scheme:dark;}
 }
-html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);
-  height:100%; font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","PingFang SC","Noto Sans CJK SC","Source Han Sans SC","Microsoft Yahei",Arial,Helvetica,sans-serif;
+html,body{
+  margin:0;padding:0;background:var(--bg);color:var(--ink);height:100%;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","PingFang SC","Noto Sans CJK SC","Source Han Sans SC","Microsoft Yahei",Arial,Helvetica,sans-serif;
   line-height:1.78; -webkit-tap-highlight-color: transparent;
 }
-/* Global content paddings adapt to bars */
+/* 滚动容器是 body，本身留出顶/底栏空间 */
 body{padding-top:var(--top-offset); padding-bottom:calc(var(--bottom-offset) + env(safe-area-inset-bottom));}
 *{box-sizing:border-box;}
 button{font:inherit;cursor:pointer;}
 a{color:inherit;text-decoration:none;}
 
-/* COVER fullscreen */
-.cover{position:fixed;inset:0;overflow:hidden;display:flex;align-items:flex-start;justify-content:flex-start;}
+/* ===== Cover（仅按钮） ===== */
+.cover{position:fixed;inset:0;overflow:hidden;display:flex;align-items:center;justify-content:center;}
 .cover svg{position:absolute;inset:0;width:100%;height:100%;display:block;object-fit:cover;}
-.cover .text{position:relative;z-index:2;display:flex;flex-direction:column;align-items:flex-start;
-  gap:8px;padding:calc(env(safe-area-inset-top) + 9vh) 6vw 0;}
-.title-cn{font-weight:900;letter-spacing:.3px;line-height:1.1;
-  font-size:clamp(34px,10vw,66px);color:#fff;text-shadow:0 2px 20px rgba(0,0,0,.25);}
-.title-en{font-weight:600;opacity:.95;line-height:1.2;
-  font-size:clamp(14px,3.8vw,22px);color:#f3f4f6;text-shadow:0 2px 20px rgba(0,0,0,.25);}
-.author{margin-top:.4rem;color:#e5e7eb;opacity:.9;font-size:clamp(12px,3.4vw,16px);}
-.tagline{color:#e5e7eb;opacity:.75;font-size:clamp(11px,3.2vw,14px);max-width:80ch;}
-
+.cover .text{display:none;}
 .open{position:absolute;left:50%;transform:translateX(-50%);
-  bottom:calc(env(safe-area-inset-bottom) + 20vh);
-  background:#ffffff;color:#111;border:none;border-radius:12px;padding:14px 18px;
-  box-shadow:var(--shadow);z-index:2;}
+  bottom:calc(env(safe-area-inset-bottom) + 18vh);
+  background:#ffffff;color:#111;border:none;border-radius:14px;padding:16px 20px;
+  box-shadow:var(--shadow);z-index:2;font-weight:700;}
+.open:active{transform:translateX(-50%) scale(.98);}
 
-/* PROGRESS BAR */
-.progress{position:fixed;top:0;left:0;height:3px;background:linear-gradient(90deg,var(--brand),var(--brand2));width:0%;z-index:50;}
-
-/* TOPBAR */
+/* ===== Top progress & toolbar ===== */
+#progress{position:fixed;top:0;left:0;height:3px;background:linear-gradient(90deg,var(--brand),var(--brand2));width:0%;z-index:50;}
 header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backdrop-filter:blur(6px);
-  border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:8px;padding:10px 14px;
-  transition:transform .2s ease, opacity .2s ease;}
+  border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;gap:8px;
+  padding:calc(env(safe-area-inset-top) + 8px) 14px 8px; transition:transform .2s ease, opacity .2s ease;}
 .brand{font-weight:800;letter-spacing:.3px;}
 .brand small{color:var(--muted);}
 .controls{display:flex;gap:8px;align-items:center;}
 .btn{appearance:none;border:1px solid var(--border);background:var(--bg-soft);padding:8px 10px;border-radius:10px;color:var(--ink);}
 .btn:active{transform:scale(.98);}
 
-/* CONTENT (SPA) */
+/* ===== Content ===== */
 #content{min-height:100dvh;}
 #content img, #content video{max-width:100%;height:auto;}
 #content table{width:100%;border-collapse:collapse;}
 #content h1, #content h2, #content h3{scroll-margin-top:calc(var(--top-offset) + 8px);}
 
-/* BOTTOM NAV (Prev | Toggle | Next) */
-.nav{position:fixed;left:50%;transform:translateX(-50%);bottom:12px;z-index:45;display:flex;gap:8px;
-  background:var(--bg);border:1px solid var(--border);box-shadow:var(--shadow);border-radius:999px;padding:8px;}
-.nav button{border:none;background:transparent;padding:8px 12px;border-radius:999px;color:var(--ink);}
+/* 关键：强力覆盖章节文件可能存在的卡片/容器样式，使其铺满屏幕 */
+#content, #content *{box-sizing:border-box;}
+#content .page, #content .card, #content .wrap, #content .wrapper, #content .container, 
+#content main, #content article, #content .prose {
+  max-width:none !important; width:auto !important; 
+  margin:0 !important; border-radius:0 !important; box-shadow:none !important; 
+  border:none !important; background:transparent !important;
+  padding-left:min(5vw,20px) !important; padding-right:min(5vw,20px) !important;
+}
+/* 让段落左右不顶边（若章节正文直接放在 body 子元素） */
+#content > *{padding-left:min(5vw,20px); padding-right:min(5vw,20px);}
+
+/* ===== Bottom nav（上一章 | 显/隐工具栏 | 下一章） ===== */
+.nav{position:fixed;left:50%;transform:translateX(-50%);bottom:calc(env(safe-area-inset-bottom) + 12px);z-index:45;display:flex;gap:6px;
+  background:var(--bg);border:1px solid var(--border);box-shadow:var(--shadow);border-radius:999px;padding:6px;}
+.nav button{border:none;background:transparent;padding:10px 14px;border-radius:999px;color:var(--ink);font-weight:600;}
 .nav button:active{transform:scale(.98);}
 
-/* States */
-.app{}
-.app.open .cover{display:none;}
+/* ===== States ===== */
+.app:not(.open) header,
+.app:not(.open) #nav,
+.app:not(.open) #progress,
+.app:not(.open) #content,
+.app:not(.open) .toc,
+.app:not(.open) .bookmarks { display:none !important; }
+
 .app.chrome-hidden header{transform:translateY(-100%);opacity:0;pointer-events:none;}
 .app.chrome-hidden{--top-offset: 0px;}
 </style>
 </head>
 <body>
-<div class="progress" id="progress"></div>
-
 <div class="app" id="app">
 
-  <!-- COVER -->
+  <!-- Cover -->
   <section class="cover" id="cover" aria-label="书籍封面">
     <svg viewBox="0 0 1000 700" preserveAspectRatio="xMidYMid slice" aria-hidden="true">
       <defs>
@@ -105,16 +112,12 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
         <ellipse cx="520" cy="360" rx="120" ry="60" stroke="rgba(255,255,255,.18)"/>
       </g>
     </svg>
-    <div class="text">
-      <div class="title-cn">Crypto简史</div>
-      <div class="title-en">A Brief History of Crypto</div>
-      <div class="author">Zino · 2025</div>
-      <div class="tagline">经历了比特币从 0 到 100 个，最后全被盗；痛定思痛重回币圈。</div>
-    </div>
-    <button class="open" id="openBtn">翻开阅读</button>
+    <div class="text"></div>
+    <button class="open" id="openBtn">开始阅读</button>
   </section>
 
-  <!-- TOPBAR -->
+  <!-- Progress Bar & Toolbar -->
+  <div id="progress"></div>
   <header id="topbar">
     <div style="display:flex;align-items:center;gap:8px;">
       <button class="btn" id="tocBtn">目录</button>
@@ -126,43 +129,39 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
     </div>
   </header>
 
-  <!-- CONTENT -->
+  <!-- Content -->
   <main id="content" aria-live="polite"></main>
 
-  <!-- BOTTOM NAV -->
+  <!-- Bottom nav -->
   <div class="nav" id="nav">
     <button id="prevBtn">上一章</button>
     <button id="chromeToggle">隐藏工具栏</button>
     <button id="nextBtn">下一章</button>
   </div>
 
-  <!-- TOC OVERLAY -->
+  <!-- Overlays -->
   <div class="toc" id="toc" style="display:none;">
-    <div class="toc-panel" role="dialog" aria-modal="true" aria-label="目录面板">
-      <h2>章节目录</h2>
-      <ol id="tocList"></ol>
+    <div class="toc-panel" role="dialog" aria-modal="true" aria-label="目录面板" style="position:absolute;top:0;left:0;height:100%;width:min(92%,380px);background:var(--bg);border-right:1px solid var(--border);box-shadow:var(--shadow);padding:10px 12px;overflow:auto;">
+      <h2 style="margin:.5rem 0 .5rem 6px;font-size:1rem;color:var(--muted);">章节目录</h2>
+      <ol id="tocList" style="list-style:none;margin:0;padding:0;"></ol>
     </div>
   </div>
-
-  <!-- BOOKMARKS OVERLAY -->
   <div class="bookmarks" id="bm" style="display:none;">
-    <div class="bm-panel" role="dialog" aria-modal="true" aria-label="书签面板">
-      <h2>书签</h2>
-      <ul class="bm-list" id="bmList"></ul>
+    <div class="bm-panel" role="dialog" aria-modal="true" aria-label="书签面板" style="position:absolute;right:0;top:0;height:100%;width:min(92%,380px);background:var(--bg);border-left:1px solid var(--border);box-shadow:var(--shadow);padding:10px 12px;overflow:auto;">
+      <h2 style="margin:.5rem 0 .5rem 6px;font-size:1rem;color:var(--muted);">书签</h2>
+      <ul class="bm-list" id="bmList" style="list-style:none;margin:0;padding:0;"></ul>
     </div>
   </div>
 
-  <!-- Hidden loader iframe for file:// fallback -->
+  <!-- Hidden loader iframe -->
   <iframe id="loader" style="position:absolute;width:0;height:0;border:0;clip:rect(0,0,0,0);"></iframe>
 
 </div>
 
 <script>
-  // Data
   var CHAPTERS = [{"part": "第一编（1970s–2008）观念与技术的源流", "title": "第1章 密码学奠基", "file": "第一编_第1章_密码学奠基.html"}, {"part": "第一编（1970s–2008）观念与技术的源流", "title": "第2章 赛博空间的政治", "file": "第一编_第2章_赛博空间的政治.html"}, {"part": "第一编（1970s–2008）观念与技术的源流", "title": "第3章 电子现金先驱", "file": "第一编_第3章_电子现金先驱.html"}, {"part": "第一编（1970s–2008）观念与技术的源流", "title": "第4章 未竟之业：共识、容错与激励的三角困境", "file": "第一编_第4章_未竟之业.html"}];
   var state = { idx: 0, ratio: 0 };
 
-  // Elements
   var $app = document.getElementById('app');
   var $openBtn = document.getElementById('openBtn');
   var $content = document.getElementById('content');
@@ -181,12 +180,11 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
   function setProgress(pct){ var p=Math.max(0,Math.min(1,pct)); $progress.style.width = (p*100) + '%'; }
 
   function syncChromeLayout(){
-    // update top & bottom offsets
     var hTop = $topbar.getBoundingClientRect().height || 56;
     var hNav = $nav.getBoundingClientRect().height || 48;
     if ($app.classList.contains('chrome-hidden')) hTop = 0;
     setVar('--top-offset', hTop + 'px');
-    setVar('--bottom-offset', hNav + 8 + 'px');
+    setVar('--bottom-offset', (hNav + 8) + 'px');
   }
 
   function renderTOC(){
@@ -194,14 +192,14 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
     for (var i=0;i<CHAPTERS.length;i++){
       var c = CHAPTERS[i];
       var li = document.createElement('li');
-      li.innerHTML = '<div class="part">'+ c.part +'</div><div class="title">'+ c.title +'</div>';
+      li.style.cssText = 'border:1px solid var(--border);background:var(--bg-soft);border-radius:10px;margin:8px 6px;padding:8px 10px;cursor:pointer;';
+      li.innerHTML = '<div style="font-weight:700;margin-bottom:2px;">'+ c.part +'</div><div style="font-size:.98rem;">'+ c.title +'</div>';
       (function(idx){ li.onclick = function(){ $toc.style.display='none'; loadChapter(idx, true); }; })(i);
       $tocList.appendChild(li);
     }
   }
 
   function tryFetch(url, ok, fail){
-    // Attempt fetch first; if blocked (file://), fallback to iframe
     try {
       fetch(url).then(function(res){
         if (!res.ok) throw new Error('HTTP '+res.status);
@@ -228,14 +226,12 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
       var m = raw.match(/<body[^>]*>([\s\S]*?)<\/body>/i);
       if (m && m[1]) return m[1];
     }catch(e){}
-    return raw; // fallback
+    return raw;
   }
 
   function insertChapterHTML(inner){
     $content.innerHTML = inner;
-    // images should scale
     syncChromeLayout();
-    // restore scroll if last read in same chapter
     var stored = null;
     try{ stored = JSON.parse(localStorage.getItem('bhoc_last') || 'null'); }catch(e){ stored = null; }
     setTimeout(function(){
@@ -243,7 +239,6 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
         var el = document.scrollingElement || document.documentElement;
         el.scrollTop = stored.ratio * (el.scrollHeight - el.clientHeight);
       }
-      // initial progress update
       updateProgress();
     }, 60);
   }
@@ -255,12 +250,10 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
     if (pushHash){ try{ history.replaceState(null, '', '#/' + encodeURIComponent(CHAPTERS[i].file)); }catch(e){} }
 
     setProgress(0.02);
-    // Try fetch then fallback iframe
     tryFetch(url, function(html){
       insertChapterHTML(extractBodyHTML(html));
     }, function(){
       iframeLoad(url, function(html){ insertChapterHTML(extractBodyHTML(html)); }, function(){
-        // last resort: show a message
         $content.innerHTML = '<p style="padding:16px;color:#d14343;">无法加载章节：'+ CHAPTERS[i].title +'。请在 Safari 浏览器中打开或检查文件路径。</p>';
       });
     });
@@ -275,7 +268,6 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
     try { localStorage.setItem('bhoc_last', JSON.stringify({idx: state.idx, ratio: state.ratio, file: CHAPTERS[state.idx].file, t: Date.now()})); }catch(e){}
   }
 
-  // Events
   window.addEventListener('scroll', function(){ updateProgress(); }, {passive:true});
   window.addEventListener('resize', function(){ syncChromeLayout(); });
   document.getElementById('prevBtn').onclick = function(){ if (state.idx>0) loadChapter(state.idx-1, true); };
@@ -285,14 +277,19 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
     document.getElementById('chromeToggle').textContent = hidden ? '显示工具栏' : '隐藏工具栏';
     syncChromeLayout();
   };
-  document.getElementById('tocBtn').onclick = function(){ $toc.style.display='block'; };
+  document.getElementById('tocBtn').onclick = function(){ $toc.style.cssText='position:fixed;inset:0;background:rgba(0,0,0,.35);backdrop-filter:blur(2px);display:block;z-index:60;'; };
   $toc.onclick = function(e){ if (e.target === $toc) $toc.style.display='none'; };
 
-  function readBookmarks(){ try{ return JSON.parse(localStorage.getItem('bhoc_bookmarks')||'[]'); }catch(_){ return []; } }
-  function writeBookmarks(list){ try{ localStorage.setItem('bhoc_bookmarks', JSON.stringify(list)); }catch(e){} }
-  function renderBookmarks(){
-    var list = readBookmarks(); $bmList.innerHTML = '';
-    if (!list.length){ var li = document.createElement('li'); li.className='bm-item'; li.textContent='暂无书签'; $bmList.appendChild(li); return; }
+  document.getElementById('bmAddBtn').onclick = function(){
+    var list = []; try{ list = JSON.parse(localStorage.getItem('bhoc_bookmarks')||'[]'); }catch(e){}
+    var entry = { idx: state.idx, file: CHAPTERS[state.idx].file, title: CHAPTERS[state.idx].title, ratio: state.ratio||0, t: Date.now() };
+    list.unshift(entry); try{ localStorage.setItem('bhoc_bookmarks', JSON.stringify(list)); }catch(e){};
+    alert('已添加书签：' + entry.title);
+  };
+  document.getElementById('bmListBtn').onclick = function(){
+    var list = []; try{ list = JSON.parse(localStorage.getItem('bhoc_bookmarks')||'[]'); }catch(e){}
+    $bmList.innerHTML = '';
+    if (!list.length){ var n = document.createElement('li'); n.className='bm-item'; n.textContent='暂无书签'; $bmList.appendChild(n); }
     for (var idx=0; idx<list.length; idx++){
       (function(idx){
         var b = list[idx];
@@ -303,17 +300,12 @@ header{position:fixed;top:0;left:0;right:0;z-index:40;background:var(--bg);backd
         var go = document.createElement('button'); go.className='btn'; go.textContent='前往';
         go.onclick = function(){ loadChapter(b.idx, true); setTimeout(function(){ var el = document.scrollingElement || document.documentElement; el.scrollTop = b.ratio*(el.scrollHeight - el.clientHeight); }, 200); $bm.style.display='none'; };
         var del = document.createElement('button'); del.className='btn'; del.textContent='删除';
-        del.onclick = function(){ var x = readBookmarks(); x.splice(idx,1); writeBookmarks(x); renderBookmarks(); };
+        del.onclick = function(){ var x = list.slice(); x.splice(idx,1); try{ localStorage.setItem('bhoc_bookmarks', JSON.stringify(x)); }catch(e){}; document.getElementById('bmListBtn').click(); };
         actions.appendChild(go); actions.appendChild(del); li.appendChild(actions); $bmList.appendChild(li);
       })(idx);
     }
-  }
-  document.getElementById('bmAddBtn').onclick = function(){
-    var list = readBookmarks();
-    var entry = { idx: state.idx, file: CHAPTERS[state.idx].file, title: CHAPTERS[state.idx].title, ratio: state.ratio||0, t: Date.now() };
-    list.unshift(entry); writeBookmarks(list); alert('已添加书签：' + entry.title);
+    $bm.style.cssText='position:fixed;inset:0;background:rgba(0,0,0,.35);backdrop-filter:blur(2px);display:block;z-index:60;';
   };
-  document.getElementById('bmListBtn').onclick = function(){ renderBookmarks(); $bm.style.display='block'; };
   $bm.onclick = function(e){ if (e.target === $bm) $bm.style.display='none'; };
 
   function startReading(){
