--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
   <title>第一编（1970s–2008）观念与技术的源流 · 手机阅读书壳</title>
 </head>
 <body>
-  <header class="book-meta">
-    <h1 class="book-title" id="meta-title">第一编（1970s–2008）观念与技术的源流</h1>
-    <div class="book-sub" id="meta-sub">作者：Zino｜2025年著 · 版本 2025-08-23</div>
+  <header class="book-meta-shell">
+    <h1 class="book-title-shell" id="meta-title">第一编（1970s–2008）观念与技术的源流</h1>
+    <div class="book-sub-shell" id="meta-sub">作者：Zino｜2025年著 · 版本 2025-08-23</div>
   </header>
 
-  <main class="container">
+  <main class="container-shell">
     <section id="index" aria-label="章节列表">
-      <div class="searchbar">
+      <div class="searchbar-shell">
         <input id="q" type="search" placeholder="搜索章节…" aria-label="搜索章节" />
       </div>
       <div id="list"></div>
     </section>
 
     <section id="viewer" style="display:none" aria-label="阅读器">
-      <div class="reader">
+      <div class="reader-shell">
         <button id="back">← 返回</button>
         <div id="reader"></div>
       </div>
     </section>
   </main>
 
-  <footer class="site">
+  <footer class="site-shell">
     《Crypto简史》本书作者：Zino，2025年著。<br/>
     本作品采用知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议（CC BY-NC-ND 4.0）授权。
   </footer>
