--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     本作品采用知识共享署名-非商业性使用-禁止演绎 4.0 国际许可协议（CC BY-NC-ND 4.0）授权。
   </footer>
 
-  <script defer src="app.js"></script>
+  <script defer src="app.js?v8"></script>
 </body>
 </html>
