--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0d0d0d"/>
-  <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="styles.css?v8" />
-  <title>第一编（1970s–2008）观念与技术的源流 · 手机阅读书壳</title>
+  <title>《Crypto简史》</title>
 </head>
 <body>
   <header class="book-meta-shell">
-    <h1 class="book-title-shell" id="meta-title">第一编（1970s–2008）观念与技术的源流</h1>
-    <div class="book-sub-shell" id="meta-sub">作者：Zino｜2025年著 · 版本 2025-08-23</div>
+    <h1 class="book-title-shell" id="meta-title">《Crypto简史》</h1>
   </header>
 
   <main class="container-shell">
