--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0d0d0d"/>
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="styles.css?v8" />
   <title>《Crypto简史》</title>
 </head>
