--- a/cover.html
+++ b/cover.html
@@ -131,7 +131,7 @@
   <div class="overlay" aria-live="polite">
     <h1>Crypto简史</h1>
     <h2>A Brief History of Crypto</h2>
-    <div class="author">作者：Zino · 版本 2025-08-23</div>
+    <div class="author">作者：Zino （赵择能）</div>
   </div>
 
   <div class="cta-wrap">
