--- a/online.html
+++ b/online.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0d0d0d"/>
-  <title>《Crypto简史》 · 手机阅读书壳</title>
+  <title>《Crypto简史》 · 目录</title>
   <style>
     /* ===== CryptoShell: styles are fully scoped under #cshell-app to avoid leakage ===== */
     :root { --cshell-accent:#7aa2ff; --cshell-accent2:#9a7aff; --cshell-fg:#eaeaea; --cshell-muted:#9aa3b2; --cshell-bg:#0b0c12; --cshell-card:#12131a; --cshell-border:#1c1e26; }
